[package]
name = "crustcore-path"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Typed worktree-confined paths and symlink-safe resolution for CrustCore."

[dependencies]
crustcore-types = { workspace = true }
