[package]
name = "crustcore-secrets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Typed secret handles and non-exfiltratable secret material for CrustCore."

[dependencies]
crustcore-types = { workspace = true }

# Encrypted-file vault backend (P8-store), behind the `vault-file` feature ONLY —
# so the nano build (which links this crate for the trust types + InMemoryStore)
# pulls NO crypto crate. AES-256-GCM AEAD + scrypt KDF + OS RNG; all RustCrypto /
# std-adjacent and well-maintained. `xtask forbidden-deps` asserts none of these
# enter the nano dependency graph. (docs/secrets.md §6; CLAUDE.md §5.1.)
aes-gcm = { version = "0.10", optional = true }
scrypt = { version = "0.11", default-features = false, optional = true }
getrandom = { version = "0.2", optional = true }

[features]
# Enables the encrypted-file vault `SecretStore` backend ([`store`]). Off by
# default; the nano build never enables it, so nano links no crypto.
vault-file = ["dep:aes-gcm", "dep:scrypt", "dep:getrandom"]

# OS keychain loaders (P8-store), behind their own features. Dependency-free: they
# shell out to the system tool (`security` on macOS, `secret-tool` on Linux) and load
# secrets INTO an `InMemoryStore` the broker reads (the decrypt-into pattern). Off by
# default; never in nano. The command-building/parsing logic is tested over a mock; the
# real shell-out is `TODO(P8-store-live)`.
macos-keychain = []
linux-keyring = []
