[package]
name = "crustcore-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared IDs, status enums, and bounded primitives for CrustCore (no heavy deps)."

[dependencies]
# Intentionally none. This crate is std-only and shared by the kernel and
# adapters alike; adding a dependency here affects the nano budget.
